@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.16 ===
+* Added phase switches.
 * Updated build scripts and dependencies.
 
 === 1.0.15 ===
